# fitness_tracker

./: .env.example  .gitignore  AGENT.md  Dockerfile  README.md  fly.toml  pyproject.toml
scripts/: get_token.py
src/whoop_mcp/: auth.py  config.py  server.py  whoop_client.py
